# bysykkel-analysis

./: README.md  pyproject.toml
data/: station_information_2023-01-20.json  station_status_2023-01-20.json
scripts/: ingest_bysykkel.py  ingest_legacy_trips.py  ingest_v1_trips.py
