[tool.poetry]
name = "bysykkel-analysis"
version = "0.1.0"
description = ""
authors = ["Fabian Thorsen <thorsen.fabian@gmail.com>"]
readme = "README.md"
packages = [{include = "bysykkel_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
isort = "^5.11.4"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
